2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_nc_groups.php: Parent row removed.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/export_csv.php
	operation/events/events_list.php
	operation/events/events.php: CSV exportation get all filters.
	
	Bug id: #3600096

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/network_components.postgreSQL.sql,
	extras/network_components.mysql.sql,
	extras/network_components.oracle.sql: Added script to create new network
	modules and groups if something fails.

2013-01-14 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/styles/dialog.css: fixed the typo for disabled the styles.
	
	MERGED FROM THE TRUNK

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/extensions.php
	godmode/servers/recon_script.php
	godmode/servers/plugin.php
	godmode/servers/manage_recontask.php
	godmode/alerts/alert_compounds.php
	godmode/alerts/alert_templates.php
	godmode/alerts/alert_actions.php
	godmode/alerts/alert_commands.php
	godmode/setup/os.list.php
	godmode/setup/news.php
	godmode/setup/links.php
	godmode/users/profile_list.php
	godmode/modules/manage_network_templates.php
	godmode/modules/manage_nc_groups.php: Restored messages when views 
	are empty.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/performance.php: Changed include for include_once
	function.
	* godmode/gis_maps/index.php: Added message when view is empty. 

2013-01-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_network_components.php: Added message
	when view is empty.

2013-01-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_component_groups.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_nc_groups.php: Added tree format for
	component groups and make more restrictive filters in local/network
	components.

2013-01-11  Dario Rodriguez <dario.rodriguez@artica.es>
