@@ -1,5 +1,11 @@
 2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/functions_component_groups.php
+	 godmode/modules/manage_network_components.php: Don't remove 
+	 parent component groups with childs assigned to components.
+
+2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* godmode/modules/manage_nc_groups.php: Parent row removed.
 
 2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
